# checkedc-clang

./: .gitignore  17-init-conflicts-raw.txt  17-init-conflicts.txt  17-init-progress.txt  CheckedC-Implementation-Notes.md  Makefile  README.md  build_instructions_readme.md  prover-test.c
automation/: README.txt  build-clang.bat  setup-files.bat  test-clang.bat
clang/: .gitignore  README.md
clang-tools-extra/clangd/: 3CCommands.cpp  3CCommands.h  3CDiagnostics.cpp  3CDiagnostics.h  CCConstraintResolver.cpp  CCConstraintResolver.h  CConvertCommands.cpp  CConvertCommands.h  CConvertDiagnostics.cpp  CConvertDiagnostics.h  CMakeLists.txt  ClangdLSPServer.cpp  ClangdLSPServer.h  ClangdServer.cpp  ClangdServer.h  Diagnostics.cpp  Diagnostics.h  Protocol.cpp  Protocol.h  TUScheduler.cpp  TUScheduler.h
clang-tools-extra/clangd/cconvert/: ArrayBoundsInferenceConsumer.cpp  ArrayBoundsInferenceConsumer.h  ArrayBoundsInformation.cpp  ArrayBoundsInformation.h  CCGlobalOptions.h  CConvInteractive.cpp  CConvInteractive.h  CConvInteractiveData.cpp  CConvInteractiveData.h  CMakeLists.txt  CheckedCConvert.cpp  ConstraintBuilder.cpp  ConstraintBuilder.h  ConstraintVariables.cpp  ConstraintVariables.h  Constraints.cpp  Constraints.h  GatherTool.cpp  GatherTool.h  GatherTypes.h  IterativeItypeHelper.cpp  IterativeItypeHelper.h  MappingVisitor.cpp  PersistentSourceLoc.cpp  PersistentSourceLoc.h  ProgramInfo.cpp  ProgramInfo.h  RewriteUtils.cpp  RewriteUtils.h  Utils.cpp  Utils.h
clang-tools-extra/clangd/test/: checkedc-deferred-bound.test  checkedc-typevariabletypeloc-uninit.test
clang-tools-extra/clangd/test/Inputs/: checkedc-typevariabletypeloc-uninit.h
clang-tools-extra/clangd/tool/: CMakeLists.txt  ClangdMain.cpp
clang/lib/CConv/: ABounds.cpp  AVarBoundsInfo.cpp  AVarGraph.cpp  ArrayBoundsInferenceConsumer.cpp  ArrayBoundsInformation.cpp  CConv.cpp  CConvInteractiveData.cpp  CMakeLists.txt  CastPlacement.cpp  CheckedRegions.cpp  ConstraintBuilder.cpp  ConstraintResolver.cpp  ConstraintVariables.cpp  Constraints.cpp  ConstraintsGraph.cpp  DeclRewriter.cpp  GatherTool.cpp  IntermediateToolHook.cpp  IterativeItypeHelper.cpp  MappingVisitor.cpp  PersistentSourceLoc.cpp  ProgramInfo.cpp  ProgramVar.cpp  RewriteUtils.cpp  StructInit.cpp  TypeVariableAnalysis.cpp  Utils.cpp
clang/lib/CConv/unittests/: CMakeLists.txt  ConstraintTests.cpp
clang/tools/3c/: .clang-format  .clang-tidy  3CStandalone.cpp  CConvStandalone.cpp  CMakeLists.txt  README.md
clang/tools/3c/functests/regression/: function_subtyping.expected.c  typedef_itypes.c
clang/tools/3c/utils/: README.md  constraint_debugger.py  conversion_progress.py  convert-commands.py  projects_file_handler.py  rununittests.py  update-includes.py
clang/tools/3c/utils/cc_conv/: convert_project.py  generate_ccommands.py
clang/tools/3c/utils/port_tools/: README.md  common.py  convert_project.py  expand_macros.py  generate_ccommands.py  includes_updater.py
clang/tools/3c/utils/renamer-pull299/: 3c-rename-functions.sh  3c-rename.sh
clang/tools/cconv-standalone/: CConvStandalone.cpp  CMakeLists.txt
clang/tools/cconv-standalone/functests/regression/: consider_allocs_safe.c  function_subtyping.c  malloc_bug.expected.c  typedef_itypes.expected.c
clang/tools/cconv-standalone/utils/cc_conv/: README.md  convert_all.sh  convert_individual.sh  convert_project.py  generate_ccommands.py
clang/tools/cconv-standalone/utils/renamer-pull299/: 3c-rename.sh
clang/tools/checked-c-convert/: ArrayBoundsInferenceConsumer.cpp  ArrayBoundsInferenceConsumer.h  ArrayBoundsInformation.cpp  ArrayBoundsInformation.h  CMakeLists.txt  CheckedCConvert.cpp  ConstraintBuilder.cpp  ConstraintBuilder.h  ConstraintVariables.cpp  ConstraintVariables.h  Constraints.cpp  Constraints.h  IterativeItypeHelper.cpp  IterativeItypeHelper.h  ItypeConstraintDetector.cpp  ItypeConstraintDetector.h  MappingVisitor.cpp  MappingVisitor.h  PersistentSourceLoc.cpp  PersistentSourceLoc.h  ProgramInfo.cpp  ProgramInfo.h  RewriteUtils.cpp  RewriteUtils.h  Utils.cpp  Utils.h  utils.h
clang/tools/checked-c-convert/functests/regression/: malloc_bug.c
clang/tools/checked-c-convert/unittests/: ConstraintTests.cpp
clang/tools/checked-c-convert/utils/: README.md  conversion_progress.py  convert-commands.py  projects_file_handler.py  update-includes.py
clang/tools/checked-c-convert/utils/cc_conv/: README.md  convert_project.py  generate_ccommands.py  includes_updater.py
lib/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/projects/checkedc-wrapper/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/: CMakeLists.txt
tools/checked-c-convert/: ArrayBoundsInferenceConsumer.cpp  ArrayBoundsInferenceConsumer.h  CMakeLists.txt  CheckedCConvert.cpp  ConstraintBuilder.cpp  ConstraintBuilder.h  ConstraintVariables.cpp  ConstraintVariables.h  Constraints.cpp  Constraints.h  MappingVisitor.cpp  MappingVisitor.h  NewTyp.cpp  NewTyp.h  PersistentSourceLoc.cpp  PersistentSourceLoc.h  ProgramInfo.cpp  ProgramInfo.h  README.md  RewriteUtils.cpp  RewriteUtils.h  Utils.cpp  Utils.h  utils.h
tools/checked-c-convert/functests/: README.md  run_tests.py
tools/checked-c-convert/functests/arr/: basic_field_local.c  basic_inter.c  basic_inter.expected.c  basic_inter_field.c  basic_inter_field.expected.c  basic_local.c  basic_local.expected.c
tools/checked-c-convert/functests/ntarr/: basic_field_local.c  basic_field_local.expected.c  basic_inter.c  basic_inter.expected.c  basic_inter_field.c  basic_inter_field.expected.c  basic_local.c  basic_local.expected.c
tools/checked-c-convert/functests/ptr/: basic_field_local.c  basic_field_local.expected.c  basic_inter.c  basic_inter.expected.c  basic_inter_field.c  basic_inter_field.expected.c  basic_local.c  basic_local.expected.c  basic_return_itype.c  basic_return_itype.expected.c
tools/checked-c-convert/functests/regression/: consider_allocs_safe.expected.c
tools/checked-c-convert/unittests/: CMakeLists.txt  ConstraintTests.cpp
tools/checked-c-convert/utils/: README.md  convert-commands.py  headerConvertScript.py  run.py  update-includes.py
(+2201 files in other folders)
