set( LLVM_LINK_COMPONENTS
        ${LLVM_TARGETS_TO_BUILD}
        Option
        Support
        )
        if (FIVE_C)
          add_compile_definitions(FIVE_C)
          set(five_c_source
            DeclRewriter_5C.cpp
          )
        endif()
        add_clang_library(CConv
          ABounds.cpp
          AVarBoundsInfo.cpp
          AVarGraph.cpp
          ArrayBoundsInferenceConsumer.cpp
          CastPlacement.cpp
          CConv.cpp
          CConvInteractiveData.cpp
          CheckedRegions.cpp
          ConstraintBuilder.cpp
          ConstraintResolver.cpp
          Constraints.cpp
          ConstraintsGraph.cpp
          ConstraintVariables.cpp
          DeclRewriter.cpp
          IntermediateToolHook.cpp
          MappingVisitor.cpp
          PersistentSourceLoc.cpp
          ProgramInfo.cpp
          ProgramVar.cpp
          RewriteUtils.cpp
          StructInit.cpp
          TypeVariableAnalysis.cpp
          Utils.cpp
          ${five_c_source}
          LINK_LIBS
          clangAST
          clangAnalysis
          clangBasic
          clangDriver
          clangFrontend
          clangRewriteFrontend
          clangStaticAnalyzerFrontend
          clangTooling
          clangToolingRefactoring
        )
        add_subdirectory(unittests)
	target_include_directories(obj.CConv PUBLIC)